# choices

./: Cargo.toml  README.md  index.html
src/: main.rs
static/: main.css
