[package]
name = "choices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yew_styles = { version="0.10", features=["layouts", "button", "text", "navbar"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
